--- a/data-repositories/package.json
+++ b/data-repositories/package.json
@@ -1,10 +1,9 @@
 {
-    "name": "@marin/lib.sms",
-    "description": "Sms client library",
+    "name": "@marin/data-repositories",
+    "description": "External data repositories used by the app",
     "keywords": [
-        "sms",
-        "lib",
-        "ts"
+        "data",
+        "repository"
     ],
     "version": "0.0.1-beta",
     "author": "Rusu Marin <dimarusu2000@gmail.com>",
@@ -20,6 +19,7 @@
         "test": "gulp test",
         "coverage": "gulp coverage",
         "coverage:show": "gulp coverageShow",
+        "debug": "npx mocha -r esm --inspect-brk",
         "clean": "gulp clean",
         "purge": "gulp purge"
     },
@@ -32,30 +32,30 @@
         "node": "12.8.0"
     },
     "dependencies": {
-        "@marin/lib.error": "file:../lib.error",
-        "twilio": "^3.39.3"
+        "@marin/lib.logger": "file:../lib.logger",
+        "bluebird": "^3.7.2",
+        "mysql": "^2.18.1",
+        "redis": "^3.0.2"
     },
     "devDependencies": {
+        "@marin/declarations": "file:../declarations",
         "@marin/lib.module-builder": "file:../lib.module-builder",
-        "@marin/lib.utils": "file:../lib.utils",
-        "@types/chai": "^4.2.7",
-        "@types/chai-arrays": "^1.0.3",
-        "@types/chai-as-promised": "^7.1.2",
-        "@types/mocha": "^5.2.7",
-        "@types/node": "^13.5.0",
-        "@typescript-eslint/eslint-plugin": "^2.17.0",
-        "@typescript-eslint/parser": "^2.17.0",
+        "@types/bluebird": "^3.5.29",
+        "@types/chai": "^4.2.8",
+        "@types/mocha": "^7.0.1",
+        "@types/mysql": "^2.15.8",
+        "@types/node": "^13.7.0",
+        "@types/redis": "^2.8.14",
+        "@typescript-eslint/eslint-plugin": "^2.19.0",
+        "@typescript-eslint/parser": "^2.19.0",
         "chai": "^4.2.0",
-        "chai-arrays": "^2.0.0",
-        "chai-as-promised": "^7.1.1",
-        "dotenv": "^8.2.0",
         "eslint": "^6.8.0",
         "eslint-config-airbnb-base": "^14.0.0",
-        "eslint-config-prettier": "^6.9.0",
-        "eslint-plugin-import": "^2.20.0",
+        "eslint-config-prettier": "^6.10.0",
+        "eslint-plugin-import": "^2.20.1",
         "eslint-plugin-prettier": "^3.1.2",
         "esm": "^3.2.25",
-        "mocha": "^7.0.0",
+        "mocha": "^7.0.1",
         "nyc": "^15.0.0",
         "prettier": "^1.19.1",
         "ts-node": "^8.6.2",
