--- a/loader/tsconfig.json
+++ b/loader/tsconfig.json
@@ -4,6 +4,7 @@
         "target": "esnext",
         "module": "esnext",
         "allowJs": true,
+        "checkJs": true,
         "declaration": true,
         "rootDir": ".",
         "outDir": "dist",
