--- a/data-repositories/package.json
+++ b/data-repositories/package.json
@@ -42,6 +42,7 @@
         "@marin/lib.module-builder": "file:../lib.module-builder",
         "@types/bluebird": "^3.5.29",
         "@types/chai": "^4.2.8",
+        "@types/dockerode": "^2.5.22",
         "@types/mocha": "^7.0.1",
         "@types/mysql": "^2.15.8",
         "@types/node": "^13.7.0",
@@ -49,6 +50,7 @@
         "@typescript-eslint/eslint-plugin": "^2.19.0",
         "@typescript-eslint/parser": "^2.19.0",
         "chai": "^4.2.0",
+        "dockerode": "^3.1.0",
         "eslint": "^6.8.0",
         "eslint-config-airbnb-base": "^14.0.0",
         "eslint-config-prettier": "^6.10.0",
