refactored mysql client

--- a/data-repositories/package.json
+++ b/data-repositories/package.json
@@ -32,8 +32,9 @@
         "node": "12.8.0"
     },
     "dependencies": {
-        "@marin/lib.utils": "file:../lib.utils",
+        "@marin/lib.error": "file:../lib.error",
         "@marin/lib.logger": "file:../lib.logger",
+        "@marin/lib.utils": "file:../lib.utils",
         "bluebird": "^3.7.2",
         "mysql": "^2.18.1",
         "redis": "^3.0.2"
