--- a/data-repositories/package.json
+++ b/data-repositories/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "@marin/data-repositories",
+    "name": "@marin/lib.data-repositories",
     "description": "External data repositories used by the app",
     "keywords": [
         "data",
@@ -40,11 +40,13 @@
         "redis": "^3.0.2"
     },
     "devDependencies": {
-        "@marin/declarations": "file:../declarations",
+        "@marin/lib.auth-engine": "file:../lib.auth-engine",
         "@marin/lib.module-builder": "file:../lib.module-builder",
+        "@rauschma/stringio": "^1.4.0",
         "@types/bluebird": "^3.5.29",
         "@types/chai": "^4.2.8",
         "@types/dockerode": "^2.5.22",
+        "@types/dotenv": "^8.2.0",
         "@types/mocha": "^7.0.1",
         "@types/mysql": "^2.15.8",
         "@types/node": "^13.7.0",
@@ -53,6 +55,7 @@
         "@typescript-eslint/parser": "^2.19.0",
         "chai": "^4.2.0",
         "dockerode": "^3.1.0",
+        "dotenv": "^8.2.0",
         "eslint": "^6.8.0",
         "eslint-config-airbnb-base": "^14.0.0",
         "eslint-config-prettier": "^6.10.0",
