--- a/lib.auth-engine/package.json
+++ b/lib.auth-engine/package.json
@@ -22,7 +22,8 @@
         "coverage": "gulp coverage",
         "coverage:show": "gulp coverageShow",
         "clean": "gulp clean",
-        "purge": "gulp purge"
+        "purge": "gulp purge",
+        "postinstall": "node scripts/postinstall.js"
     },
     "lint-staged": {
         "*.ts": [
@@ -45,29 +46,11 @@
         "@marin/lib.memcache": "file:../lib.memcache",
         "@marin/lib.module-builder": "file:../lib.module-builder",
         "@marin/lib.sms": "file:../lib.sms",
-        "@types/agenda": "^2.0.6",
-        "@types/chai": "^4.2.7",
         "@types/geoip-lite": "1",
-        "@types/mocha": "^5.2.7",
         "@types/mongoose": "^5.5.36",
-        "@types/node": "^13.1.0",
         "@types/owasp-password-strength-test": "^1.3.0",
-        "@typescript-eslint/eslint-plugin": "^2.13.0",
-        "@typescript-eslint/parser": "^2.13.0",
-        "chai": "^4.2.0",
-        "eslint": "^6.8.0",
-        "eslint-config-airbnb-base": "^14.0.0",
-        "eslint-config-prettier": "^6.8.0",
-        "eslint-plugin-import": "^2.19.1",
-        "eslint-plugin-prettier": "^3.1.2",
-        "esm": "^3.2.25",
         "keypair": "^1.0.1",
-        "mocha": "^6.2.2",
         "mongodb-memory-server": "^6.2.1",
-        "mongoose": "^5.8.3",
-        "nyc": "^15.0.0",
-        "prettier": "^1.19.1",
-        "ts-node": "^8.5.4",
-        "typescript": "^3.7.4"
+        "mongoose": "^5.8.3"
     }
 }
