--- a/lib.module-builder/package.json
+++ b/lib.module-builder/package.json
@@ -1,15 +1,35 @@
 {
   "name": "@marin/lib.module-builder",
   "version": "1.0.0",
-  "description": "Builder for libs",
+  "description": "Builder and common stuff for typescript modules",
   "main": "lib/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "purge": "rm -rf node_modules package-lock.json"
   },
   "author": "Rusu Marin <dimarusu2000@gmail.com>",
   "license": "ISC",
   "dependencies": {
     "del": "5",
-    "npm-run": "5"
+    "npm-run": "5",
+    "@types/chai": "^4.2.7",
+    "@types/mocha": "^5.2.7",
+    "@types/node": "^13.1.0",
+    "@typescript-eslint/eslint-plugin": "^2.13.0",
+    "@typescript-eslint/parser": "^2.13.0",
+    "chai": "^4.2.0",
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-config-prettier": "^6.8.0",
+    "eslint-plugin-import": "^2.19.1",
+    "eslint-plugin-mocha": "^6.3.0",
+    "eslint-plugin-node": "^11.0.0",
+    "eslint-plugin-prettier": "^3.1.2",
+    "eslint-plugin-security": "^1.4.0",
+    "esm": "^3.2.25",
+    "mocha": "^6.2.2",
+    "nyc": "^15.0.0",
+    "prettier": "^1.19.1",
+    "ts-node": "^8.5.4",
+    "typescript": "^3.7.4"
   }
 }
