--- a/data-repositories/.eslintrc
+++ b/data-repositories/.eslintrc
@@ -24,6 +24,7 @@
                 "allowForLoopAfterthoughts": true
             }
         ],
+        "class-methods-use-this": "warn",
         "@typescript-eslint/ban-ts-ignore": "warn",
         "@typescript-eslint/no-use-before-define": "warn",
         "@typescript-eslint/no-namespace": "off",
