--- a/data-repositories/.eslintrc
+++ b/data-repositories/.eslintrc
@@ -16,6 +16,8 @@
     "rules": {
         "prettier/prettier": "error",
         "import/prefer-default-export": "off",
+
+        "no-console": "error",
         "no-param-reassign": "warn",
         "no-use-before-define": "warn",
         "no-plusplus": [
