--- a/lib.auth-engine/package.json
+++ b/lib.auth-engine/package.json
@@ -50,6 +50,26 @@
         "@types/owasp-password-strength-test": "^1.3.0",
         "keypair": "^1.0.1",
         "mongodb-memory-server": "^6.2.1",
-        "mongoose": "^5.8.3"
+        "mongoose": "^5.8.3",
+        "@types/chai": "^4.2.7",
+        "@types/mocha": "^5.2.7",
+        "@types/node": "^13.1.0",
+        "@typescript-eslint/eslint-plugin": "^2.13.0",
+        "@typescript-eslint/parser": "^2.13.0",
+        "chai": "^4.2.0",
+        "eslint": "^6.8.0",
+        "eslint-config-airbnb-base": "^14.0.0",
+        "eslint-config-prettier": "^6.8.0",
+        "eslint-plugin-import": "^2.19.1",
+        "eslint-plugin-mocha": "^6.3.0",
+        "eslint-plugin-node": "^11.0.0",
+        "eslint-plugin-prettier": "^3.1.2",
+        "eslint-plugin-security": "^1.4.0",
+        "esm": "^3.2.25",
+        "mocha": "^6.2.2",
+        "nyc": "^15.0.0",
+        "prettier": "^1.19.1",
+        "ts-node": "^8.5.4",
+        "typescript": "^3.7.4"
     }
 }
