--- a/lib.auth-engine/package.json
+++ b/lib.auth-engine/package.json
@@ -36,7 +36,6 @@
         "@marin/lib.error": "file:../lib.error",
         "@marin/lib.logger": "file:../lib.logger",
         "@marin/lib.utils": "file:../lib.utils",
-        "argon2": "^0.25.1",
         "owasp-password-strength-test": "^1.3.0"
     },
     "devDependencies": {
@@ -45,17 +44,19 @@
         "@marin/lib.memcache": "file:../lib.memcache",
         "@marin/lib.module-builder": "file:../lib.module-builder",
         "@marin/lib.sms": "file:../lib.sms",
-        "@types/geoip-lite": "1",
-        "@types/mongoose": "^5.5.36",
-        "@types/owasp-password-strength-test": "^1.3.0",
-        "keypair": "^1.0.1",
-        "mongodb-memory-server": "^6.2.1",
-        "mongoose": "^5.8.3",
+        "@ronomon/crypto-async": "^5.0.1",
+        "@types/bcrypt": "^3.0.0",
         "@types/chai": "^4.2.7",
+        "@types/geoip-lite": "1",
         "@types/mocha": "^5.2.7",
+        "@types/mongoose": "^5.5.36",
         "@types/node": "^13.1.0",
+        "@types/owasp-password-strength-test": "^1.3.0",
+        "@types/ronomon__crypto-async": "^2.0.0",
         "@typescript-eslint/eslint-plugin": "^2.13.0",
         "@typescript-eslint/parser": "^2.13.0",
+        "argon2": "^0.25.1",
+        "bcrypt": "^4.0.1",
         "chai": "^4.2.0",
         "eslint": "^6.8.0",
         "eslint-config-airbnb-base": "^14.0.0",
@@ -66,7 +67,10 @@
         "eslint-plugin-prettier": "^3.1.2",
         "eslint-plugin-security": "^1.4.0",
         "esm": "^3.2.25",
+        "keypair": "^1.0.1",
         "mocha": "^6.2.2",
+        "mongodb-memory-server": "^6.2.1",
+        "mongoose": "^5.8.3",
         "nyc": "^15.0.0",
         "prettier": "^1.19.1",
         "ts-node": "^8.5.4",
