--- a/data-repositories/package.json
+++ b/data-repositories/package.json
@@ -42,15 +42,16 @@
         "@marin/lib.module-builder": "file:../lib.module-builder",
         "@rauschma/stringio": "^1.4.0",
         "@types/chai": "^4.2.11",
-        "@types/mocha": "^7.0.2",
         "@types/dockerode": "^2.5.22",
         "@types/dotenv": "^8.2.0",
-        "dockerode": "^3.1.0",
-        "dotenv": "^8.2.0",
+        "@types/mathjs": "^6.0.5",
+        "@types/mocha": "^7.0.2",
         "@types/node": "^13.11.0",
         "@typescript-eslint/eslint-plugin": "^2.26.0",
         "@typescript-eslint/parser": "^2.26.0",
         "chai": "^4.2.0",
+        "dockerode": "^3.1.0",
+        "dotenv": "^8.2.0",
         "eslint": "^6.8.0",
         "eslint-config-airbnb-base": "^14.1.0",
         "eslint-config-prettier": "^6.10.1",
@@ -60,6 +61,7 @@
         "mocha": "^7.1.1",
         "nyc": "^15.0.1",
         "prettier": "^2.0.2",
+        "queue-typescript": "^1.0.1",
         "ts-node": "^8.8.1",
         "typescript": "^3.8.3"
     }
