--- a/core.declarations/.gitignore
+++ b/core.declarations/.gitignore
@@ -1,4 +1,3 @@
-
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
 # compiled output
@@ -13,12 +12,25 @@
 /.nyc_output
 /coverage
 
+# environment
+.env
+
 # dependencies
 /node_modules
 package-lock.json
 
 # IDEs and editors
 /.idea
+.project
+.classpath
+.c9/
+*.launch
+.settings/
+*.sublime-workspace
+
+# IDE - VSCode
+.vscode/*
+!.vscode/settings.json
 .project
 .classpath
 .c9/
@@ -63,5 +75,3 @@ Thumbs.db
 *.swp
 .Spotlight*
 .Trashes
-
-	
