--- a/lib.exception/.gitignore
+++ b/lib.exception/.gitignore
@@ -12,12 +12,25 @@
 /.nyc_output
 /coverage
 
+# environment
+.env
+
 # dependencies
 /node_modules
 package-lock.json
 
 # IDEs and editors
 /.idea
+.project
+.classpath
+.c9/
+*.launch
+.settings/
+*.sublime-workspace
+
+# IDE - VSCode
+.vscode/*
+!.vscode/settings.json
 .project
 .classpath
 .c9/
