--- a/lib.exception/package.json
+++ b/lib.exception/package.json
@@ -1,12 +1,10 @@
 {
-    "name": "@thermopylae/core.jwt",
-    "description": "JWT Manager",
+    "name": "@thermopylae/lib.exception",
+    "description": "Generic Exception",
     "keywords": [
-        "jwt",
-        "manager",
-        "session"
+        "exception"
     ],
-    "version": "0.0.1587134607",
+    "version": "0.0.1587161379",
     "author": "Rusu Marin <dimarusu2000@gmail.com>",
     "license": "ISC",
     "main": "dist/index.js",
@@ -35,14 +33,7 @@
     "engines": {
         "node": "12.8.0"
     },
-    "dependencies": {
-        "@thermopylae/lib.exception": "0",
-        "@thermopylae/lib.utils": "0",
-        "jsonwebtoken": "8"
-    },
     "devDependencies": {
-        "@thermopylae/core.declarations": "0",
-        "@thermopylae/module-builder": "0",
-        "@types/jsonwebtoken": "8"
+        "@thermopylae/module-builder": "0"
     }
 }
