--- a/lib.utils/package.json
+++ b/lib.utils/package.json
@@ -1,70 +1,55 @@
 {
-  "name": "@marin/lib.utils",
-  "description": "Utility functions and shared constants",
-  "keywords": [
-    "utils",
-    "shared",
-    "constants"
-  ],
-  "version": "0.0.1-beta",
-  "author": "Rusu Marin <dimarusu2000@gmail.com>",
-  "license": "ISC",
-  "main": "dist/index.js",
-  "typings": "dist/index.d.ts",
-  "files": [
-    "dist/**/*"
-  ],
-  "scripts": {
-    "lint": "eslint \"lib/**/*.ts\" \"test/**/*.ts\" --fix",
-    "build": "gulp build",
-    "test": "gulp test",
-    "debug": "npx mocha -r esm --inspect-brk",
-    "coverage": "gulp coverage",
-    "coverage:show": "gulp coverageShow",
-    "clean": "gulp clean",
-    "purge": "gulp purge"
-  },
-  "lint-staged": {
-    "*.ts": [
-      "eslint"
-    ]
-  },
-  "engines": {
-    "node": ">=12.8.0"
-  },
-  "type": "module",
-  "dependencies": {
-    "@marin/lib.error": "file:../lib.error",
-    "lodash.clone": "^4.5.0",
-    "lodash.clonedeep": "^4.5.0",
-    "otplib": "^11.0.1",
-    "uuid": "^7.0.3"
-  },
-  "devDependencies": {
-    "@marin/lib.module-builder": "file:../lib.module-builder",
-    "@types/chai": "^4.2.5",
-    "@types/chai-arrays": "^1.0.3",
-    "@types/lodash.clone": "^4.5.6",
-    "@types/lodash.clonedeep": "^4.5.6",
-    "@types/mocha": "^5.2.7",
-    "@types/node": "^12.12.12",
-    "@types/otplib": "^10.0.0",
-    "@types/uuid": "^7.0.2",
-    "@typescript-eslint/eslint-plugin": "^2.8.0",
-    "@typescript-eslint/parser": "^2.8.0",
-    "chai": "^4.2.0",
-    "chai-arrays": "^2.0.0",
-    "eslint": "^6.7.0",
-    "eslint-config-airbnb-base": "^14.0.0",
-    "eslint-config-prettier": "^6.7.0",
-    "eslint-plugin-import": "^2.18.2",
-    "eslint-plugin-prettier": "^3.1.1",
-    "esm": "^3.2.25",
-    "mocha": "^6.2.2",
-    "nyc": "^14.1.1",
-    "prettier": "^1.19.1",
-    "save-dev": "0.0.1-security",
-    "ts-node": "^8.5.2",
-    "typescript": "^3.7.2"
-  }
+    "name": "@thermopylae/lib.utils",
+    "description": "Utility functions",
+    "keywords": [
+        "utils",
+        "shared"
+    ],
+    "version": "0.0.1587165126",
+    "author": "Rusu Marin <dimarusu2000@gmail.com>",
+    "license": "ISC",
+    "main": "dist/index.js",
+    "typings": "dist/index.d.ts",
+    "files": [
+        "dist/**/*"
+    ],
+    "scripts": {
+        "lint": "eslint \"lib/**/*.ts\" \"test/**/*.ts\" --fix",
+        "build": "gulp build",
+        "test": "gulp test",
+        "coverage": "gulp coverage",
+        "coverage:show": "gulp coverageShow",
+        "debug": "gulp debug",
+        "clean": "gulp clean",
+        "purge": "gulp purge",
+        "update": "gulp stickToMajorSemver && npm update --dev --force -verbose",
+        "bumpVersion": "timestamp=$(date \"+%s\") && npm version 0.0.$timestamp",
+        "prepublishOnly": "npm run lint && npm run clean && npm run build && npm run bumpVersion && gulp stickToMajorSemver"
+    },
+    "lint-staged": {
+        "*.ts": [
+            "eslint"
+        ]
+    },
+    "engines": {
+        "node": ">=12.8.0"
+    },
+    "dependencies": {
+        "@thermopylae/lib.exception": "0",
+        "lodash.clone": "4",
+        "lodash.clonedeep": "4",
+        "otplib": "11",
+        "uuid": "7"
+    },
+    "devDependencies": {
+        "@thermopylae/core.declarations": "0",
+        "@thermopylae/module-builder": "0",
+        "@types/chai-arrays": "1",
+        "@types/lodash.clone": "4",
+        "@types/lodash.clonedeep": "4",
+        "@types/otplib": "10",
+        "@types/uuid": "7",
+        "chai-arrays": "2",
+        "save-dev": "0"
+    }
 }
