--- a/core.jwt/package.json
+++ b/core.jwt/package.json
@@ -37,11 +37,12 @@
     },
     "dependencies": {
         "@thermopylae/lib.exception": "0",
-        "@thermopylae/lib.utils": "0.0.1587208204",
+        "@thermopylae/lib.memcache": "0",
+        "@thermopylae/lib.utils": "0",
         "jsonwebtoken": "8"
     },
     "devDependencies": {
-        "@thermopylae/core.declarations": "0",
+        "@thermopylae/core.declarations": "0.0.1587246870",
         "@thermopylae/module-builder": "0",
         "@types/jsonwebtoken": "8"
     }
