--- a/lib.collections/package.json
+++ b/lib.collections/package.json
@@ -1,16 +1,14 @@
 {
-    "name": "@thermopylae/lib.memcache",
-    "description": "Memory caches",
+    "name": "@thermopylae/lib.collections",
+    "description": "Generic collections",
     "keywords": [
-        "events",
-        "cache",
-        "memory"
+        "collections"
     ],
-    "version": "0.0.1587250985",
+    "version": "0.0.1587250775",
     "author": "Rusu Marin <dimarusu2000@gmail.com>",
     "license": "ISC",
     "main": "dist/index.js",
-    "typings": "dist/index.d.ts",
+    "types": "dist/index.d.ts",
     "files": [
         "dist/**/*"
     ],
@@ -36,12 +34,9 @@
         "node": "12.8.0"
     },
     "dependencies": {
-        "@thermopylae/lib.collections": "0",
-        "@thermopylae/lib.exception": "0",
-        "@thermopylae/lib.utils": "0"
+        "lodash.isfunction": "3"
     },
     "devDependencies": {
-        "@thermopylae/core.declarations": "0",
         "@thermopylae/module-builder": "0",
         "@types/chai-arrays": "1",
         "chai-arrays": "2"
