--- a/lib.memcache/package.json
+++ b/lib.memcache/package.json
@@ -6,7 +6,7 @@
         "cache",
         "memory"
     ],
-    "version": "0.0.1587250985",
+    "version": "0.0.1587317824",
     "author": "Rusu Marin <dimarusu2000@gmail.com>",
     "license": "ISC",
     "main": "dist/index.js",
@@ -38,12 +38,14 @@
     "dependencies": {
         "@thermopylae/lib.collections": "0",
         "@thermopylae/lib.exception": "0",
-        "@thermopylae/lib.utils": "0"
+        "@thermopylae/lib.utils": "0.0.1587318247"
     },
     "devDependencies": {
         "@thermopylae/core.declarations": "0",
         "@thermopylae/module-builder": "0",
         "@types/chai-arrays": "1",
-        "chai-arrays": "2"
+        "@types/dotenv": "8",
+        "chai-arrays": "2",
+        "dotenv": "8"
     }
 }
