--- a/lib.memcache/package.json
+++ b/lib.memcache/package.json
@@ -38,12 +38,10 @@
     "dependencies": {
         "@thermopylae/lib.collections": "0",
         "@thermopylae/lib.exception": "0",
-        "@thermopylae/lib.utils": "0",
-        "@types/yallist": "^3.0.1",
-        "yallist": "4"
+        "@thermopylae/lib.utils": "0"
     },
     "devDependencies": {
-        "@thermopylae/core.declarations": "0.0.1587375061",
+        "@thermopylae/core.declarations": "0.0.1587409735",
         "@thermopylae/module-builder": "0",
         "@types/chai-arrays": "1",
         "@types/dotenv": "8",
