--- a/lib.memcache/package.json
+++ b/lib.memcache/package.json
@@ -39,11 +39,11 @@
         "@akashbabu/node-dll": "2",
         "@thermopylae/lib.collections": "0",
         "@thermopylae/lib.exception": "0",
-        "@thermopylae/lib.utils": "0"
+        "@thermopylae/lib.utils": "0.0.1587822817"
     },
     "devDependencies": {
         "@thermopylae/core.declarations": "0",
-        "@thermopylae/module-builder": "0.0.1587417801",
+        "@thermopylae/module-builder": "0",
         "@types/chai-arrays": "1",
         "@types/dotenv": "8",
         "chai-arrays": "2",
