--- a/module-builder/package.json
+++ b/module-builder/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@thermopylae/module-builder",
-  "version": "0.0.1587417801",
+  "version": "0.0.1592158976",
   "description": "Builder and common stuff for typescript modules",
   "main": "lib/index.js",
   "files": [
@@ -34,7 +34,7 @@
     "nyc": "15",
     "prettier": "1",
     "ts-node": "8",
-    "typescript": "3",
+    "typescript": "latest",
     "gulp": "4"
   }
 }
