--- a/lib.exception/tsconfig.json
+++ b/lib.exception/tsconfig.json
@@ -2,7 +2,7 @@
     "compilerOptions": {
         "incremental": true,
         "target": "esnext",
-        "module": "esnext",
+        "module": "commonjs",
         "allowJs": true,
         "checkJs": true,
         "declaration": true,
