--- a/module-builder/package.json
+++ b/module-builder/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@thermopylae/module-builder",
-  "version": "0.0.1592600596",
+  "version": "0.0.1592762339",
   "description": "Builder and common stuff for typescript modules",
   "main": "lib/index.js",
   "files": [
@@ -13,28 +13,28 @@
   "author": "Rusu Marin <dimarusu2000@gmail.com>",
   "license": "ISC",
   "dependencies": {
-    "@types/chai": "^4.2.11",
-    "@types/mocha": "5",
-    "@types/node": "^13.13.12",
-    "@typescript-eslint/eslint-plugin": "^2.34.0",
-    "@typescript-eslint/parser": "^2.34.0",
-    "chai": "4",
-    "del": "5",
-    "eslint": "6",
-    "eslint-config-airbnb-base": "^14.2.0",
-    "eslint-config-prettier": "^6.11.0",
-    "eslint-plugin-import": "^2.21.2",
-    "eslint-plugin-mocha": "6",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prettier": "^3.1.4",
-    "eslint-plugin-security": "1",
-    "esm": "3",
-    "gulp": "4",
-    "mocha": "^6.2.3",
-    "npm-run": "5",
-    "nyc": "^15.1.0",
-    "prettier": "1",
-    "ts-node": "^8.10.2",
-    "typescript": "^4.0.0-dev.20200615"
+    "@types/chai": "latest",
+    "@types/mocha": "latest",
+    "@types/node": "latest",
+    "@typescript-eslint/eslint-plugin": "latest",
+    "@typescript-eslint/parser": "latest",
+    "chai": "latest",
+    "del": "latest",
+    "eslint": "7.2",
+    "eslint-config-airbnb-base": "latest",
+    "eslint-config-prettier": "latest",
+    "eslint-plugin-import": "latest",
+    "eslint-plugin-mocha": "latest",
+    "eslint-plugin-node": "latest",
+    "eslint-plugin-prettier": "latest",
+    "eslint-plugin-security": "latest",
+    "esm": "latest",
+    "gulp": "latest",
+    "mocha": "latest",
+    "npm-run": "latest",
+    "nyc": "latest",
+    "prettier": "latest",
+    "ts-node": "latest",
+    "typescript": "latest"
   }
 }
