--- a/lib.utils/package.json
+++ b/lib.utils/package.json
@@ -5,7 +5,7 @@
         "utils",
         "shared"
     ],
-    "version": "0.0.1592766012",
+    "version": "0.0.1592849945",
     "author": "Rusu Marin <dimarusu2000@gmail.com>",
     "license": "ISC",
     "main": "dist/index.js",
@@ -41,6 +41,7 @@
         "lodash.clone": "4",
         "lodash.clonedeep": "4",
         "otplib": "11",
+        "tiny-async-pool": "1",
         "uuid": "7"
     },
     "devDependencies": {
@@ -49,6 +50,7 @@
         "@types/chai-arrays": "1",
         "@types/chai-as-promised": "7",
         "@types/otplib": "10",
+        "@types/tiny-async-pool": "1",
         "@types/uuid": "7",
         "chai-arrays": "2",
         "chai-as-promised": "7"
