--- a/module-builder/package.json
+++ b/module-builder/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@thermopylae/module-builder",
-  "version": "0.0.1592762339",
+  "version": "0.0.1592767176",
   "description": "Builder and common stuff for typescript modules",
   "main": "lib/index.js",
   "files": [
@@ -13,28 +13,28 @@
   "author": "Rusu Marin <dimarusu2000@gmail.com>",
   "license": "ISC",
   "dependencies": {
-    "@types/chai": "latest",
-    "@types/mocha": "latest",
-    "@types/node": "latest",
-    "@typescript-eslint/eslint-plugin": "latest",
-    "@typescript-eslint/parser": "latest",
-    "chai": "latest",
-    "del": "latest",
+    "@types/chai": "4",
+    "@types/mocha": "7",
+    "@types/node": "14",
+    "@typescript-eslint/eslint-plugin": "3",
+    "@typescript-eslint/parser": "3",
+    "chai": "4",
+    "del": "5",
     "eslint": "7.2",
-    "eslint-config-airbnb-base": "latest",
-    "eslint-config-prettier": "latest",
-    "eslint-plugin-import": "latest",
-    "eslint-plugin-mocha": "latest",
-    "eslint-plugin-node": "latest",
-    "eslint-plugin-prettier": "latest",
-    "eslint-plugin-security": "latest",
-    "esm": "latest",
-    "gulp": "latest",
-    "mocha": "latest",
-    "npm-run": "latest",
-    "nyc": "latest",
-    "prettier": "latest",
-    "ts-node": "latest",
-    "typescript": "latest"
+    "eslint-config-airbnb-base": "14",
+    "eslint-config-prettier": "6",
+    "eslint-plugin-import": "2",
+    "eslint-plugin-mocha": "7",
+    "eslint-plugin-node": "11",
+    "eslint-plugin-prettier": "3",
+    "eslint-plugin-security": "1",
+    "esm": "3",
+    "gulp": "4",
+    "mocha": "8",
+    "npm-run": "5",
+    "nyc": "15",
+    "prettier": "2",
+    "ts-node": "8",
+    "typescript": "^4.0.0-dev.20200621"
   }
 }
