--- a/lib.cache/tsconfig.json
+++ b/lib.cache/tsconfig.json
@@ -1,8 +1,8 @@
 {
     "compilerOptions": {
         "incremental": true,
-        "target": "esnext",
-        "module": "commonjs",
+        "target": "ES2020",
+        "module": "CommonJS",
         "allowJs": true,
         "declaration": true,
         "outDir": "dist",
