--- a/core.declarations/package.json
+++ b/core.declarations/package.json
@@ -5,7 +5,7 @@
         "core",
         "declarations"
     ],
-    "version": "0.0.1593342735",
+    "version": "0.0.1595083377",
     "author": "Rusu Marin <dimarusu2000@gmail.com>",
     "license": "ISC",
     "types": "lib/index.d.ts",
@@ -26,7 +26,7 @@
         ]
     },
     "engines": {
-        "node": "12.8.0"
+        "node": ">= 14"
     },
     "devDependencies": {
         "@thermopylae/module-builder": "0"
