--- a/lib.collections/package.json
+++ b/lib.collections/package.json
@@ -40,11 +40,12 @@
         "lodash.isfunction": "3",
         "mongo-query": "0",
         "object-path": "0",
-        "rxjs": "6"
+        "rxjs": "6",
+        "thenby": "^1.3.4"
     },
     "devDependencies": {
         "@b4dnewz/mongodb-operators": "0",
-        "@thermopylae/core.declarations": "0.0.1595083377",
+        "@thermopylae/core.declarations": "0.0.1595106412",
         "@thermopylae/lib.utils": "0",
         "@thermopylae/module-builder": "0",
         "@types/chai-arrays": "1",
