--- a/lib.collections/package.json
+++ b/lib.collections/package.json
@@ -46,12 +46,13 @@
     "devDependencies": {
         "@b4dnewz/mongodb-operators": "0",
         "@thermopylae/core.declarations": "0",
-        "@thermopylae/lib.unit-test": "0.0.1595168219",
+        "@thermopylae/lib.unit-test": "0",
         "@thermopylae/lib.utils": "0",
         "@thermopylae/module-builder": "0",
         "@types/object-path": "0",
         "json-schema-typed": "7",
-        "mocker-data-generator": "2"
+        "mocker-data-generator": "2",
+        "range-generator": "1"
     },
     "peerDependencies": {
         "mocha": "8"
