--- a/lib.collections/package.json
+++ b/lib.collections/package.json
@@ -56,5 +56,7 @@
     },
     "peerDependencies": {
         "mocha": "8"
-    }
+    },
+    "exports": "./dist/index.js",
+    "type": "commonjs"
 }
