--- a/module-builder/package.json
+++ b/module-builder/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@thermopylae/module-builder",
-  "version": "0.0.1593345042",
+  "version": "0.0.1595664048",
   "description": "Builder and common stuff for typescript modules",
   "main": "lib/index.js",
   "files": [
@@ -35,6 +35,6 @@
     "nyc": "15",
     "prettier": "2",
     "ts-node": "8",
-    "typescript": "^4.0.0-dev.20200621"
+    "typescript": "4.0.0-beta"
   }
 }
