Decorators library; Unit tests Collection

--- a/lib.utils/package.json
+++ b/lib.utils/package.json
@@ -5,7 +5,7 @@
         "utils",
         "shared"
     ],
-    "version": "0.0.1592946292",
+    "version": "0.0.1595765664",
     "author": "Rusu Marin <dimarusu2000@gmail.com>",
     "license": "ISC",
     "main": "dist/index.js",
@@ -45,13 +45,15 @@
         "@thermopylae/core.declarations": "0",
         "@thermopylae/lib.unit-test": "0",
         "@thermopylae/module-builder": "0",
-        "@types/otplib": "10",
-        "@types/uuid": "7",
         "@types/lodash.clone": "4",
-        "@types/lodash.clonedeep": "4"
+        "@types/lodash.clonedeep": "4",
+        "@types/otplib": "10",
+        "@types/uuid": "7"
     },
     "peerDependencies": {
         "mocha": "8",
         "chai": "4"
-    }
+    },
+    "exports": "./dist/index.js",
+    "type": "commonjs"
 }
