--- a/lib.collections/package.json
+++ b/lib.collections/package.json
@@ -37,19 +37,21 @@
         "@thermopylae/lib.exception": "0",
         "ajv": "6",
         "ajv-i18n": "3",
+        "dot-prop": "5",
+        "filtr": "0",
         "lodash.isfunction": "3",
         "mongo-query": "0",
-        "object-path": "0",
         "rxjs": "6",
         "thenby": "1"
     },
     "devDependencies": {
         "@b4dnewz/mongodb-operators": "0",
-        "@thermopylae/core.declarations": "0.0.1595676466",
+        "@thermopylae/core.declarations": "0",
         "@thermopylae/lib.unit-test": "0",
-        "@thermopylae/lib.utils": "0",
+        "@thermopylae/lib.utils": "0.0.1595765664",
         "@thermopylae/module-builder": "0",
-        "@types/object-path": "0",
+        "@types/deep-freeze": "0",
+        "deep-freeze": "0",
         "json-schema-typed": "7",
         "mocker-data-generator": "2",
         "range-generator": "1"
