--- a/lib.decorators/package.json
+++ b/lib.decorators/package.json
@@ -30,7 +30,10 @@
         "unpublish": "npm unpublish --force $npm_package_name"
     },
     "devDependencies": {
-        "@thermopylae/module-builder": "0"
+        "@thermopylae/core.declarations": "0.0.1596382291",
+        "@thermopylae/lib.utils": "0",
+        "@thermopylae/module-builder": "0",
+        "enum-for": "0"
     },
     "peerDependencies": {
         "mocha": "8",
@@ -46,6 +49,6 @@
     },
     "license": "ISC",
     "dependencies": {
-        "fast-stable-stringify": "^1.0.0"
+        "fast-stable-stringify": "1"
     }
 }
