Unit tests Collection::find

--- a/lib.collections/package.json
+++ b/lib.collections/package.json
@@ -48,8 +48,8 @@
         "@b4dnewz/mongodb-operators": "0",
         "@thermopylae/core.declarations": "0",
         "@thermopylae/lib.unit-test": "0",
-        "@thermopylae/lib.utils": "0.0.1595765664",
-        "@thermopylae/module-builder": "0",
+        "@thermopylae/lib.utils": "0",
+        "@thermopylae/module-builder": "0.0.1600529929",
         "@types/deep-freeze": "0",
         "deep-freeze": "0",
         "json-schema-typed": "7",
