--- a/module-builder/package.json
+++ b/module-builder/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@thermopylae/module-builder",
-  "version": "0.0.1595664048",
+  "version": "0.0.1600529929",
   "description": "Builder and common stuff for typescript modules",
   "main": "lib/index.js",
   "files": [
@@ -14,13 +14,13 @@
   "license": "ISC",
   "dependencies": {
     "@types/chai": "4",
-    "@types/mocha": "7",
+    "@types/mocha": "8",
     "@types/node": "14",
     "@typescript-eslint/eslint-plugin": "3",
     "@typescript-eslint/parser": "3",
     "chai": "4",
     "del": "5",
-    "eslint": "7.2",
+    "eslint": "7",
     "eslint-config-airbnb-base": "14",
     "eslint-config-prettier": "6",
     "eslint-plugin-import": "2",
@@ -35,6 +35,6 @@
     "nyc": "15",
     "prettier": "2",
     "ts-node": "8",
-    "typescript": "4.0.0-beta"
+    "typescript": "4"
   }
 }
