Unit tests Collection::replace

--- a/lib.collections/package.json
+++ b/lib.collections/package.json
@@ -16,6 +16,7 @@
         "lint": "eslint \"lib/**/*.ts\" \"test/**/*.ts\" --fix",
         "build": "gulp build",
         "test": "gulp test",
+        "report": "gulp report",
         "coverage": "gulp coverage",
         "coverage:show": "gulp coverageShow",
         "debug": "gulp debug",
@@ -39,6 +40,7 @@
         "ajv-i18n": "3",
         "dot-prop": "5",
         "filtr": "0",
+        "isobject": "4",
         "lodash.isfunction": "3",
         "mongo-query": "0",
         "rxjs": "6",
@@ -49,10 +51,12 @@
         "@thermopylae/core.declarations": "0",
         "@thermopylae/lib.unit-test": "0",
         "@thermopylae/lib.utils": "0",
-        "@thermopylae/module-builder": "0.0.1600529929",
+        "@thermopylae/module-builder": "0.0.1600604601",
         "@types/deep-freeze": "0",
+        "@types/lodash.uniqby": "4",
         "deep-freeze": "0",
         "json-schema-typed": "7",
+        "lodash.uniqby": "4",
         "mocker-data-generator": "2",
         "range-generator": "1"
     },
