--- a/lib.collections/tsconfig.json
+++ b/lib.collections/tsconfig.json
@@ -2,7 +2,7 @@
     "compilerOptions": {
         "incremental": true,
         "target": "esnext",
-        "module": "commonjs",
+        "module": "esnext",
         "moduleResolution": "node",
         "lib": [
             "ESNext"
