--- a/module-builder/package.json
+++ b/module-builder/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@thermopylae/module-builder",
-  "version": "0.0.1600529929",
+  "version": "0.0.1600604601",
   "description": "Builder and common stuff for typescript modules",
   "main": "lib/index.js",
   "files": [
@@ -31,6 +31,7 @@
     "esm": "3",
     "gulp": "4",
     "mocha": "8",
+    "mochawesome": "6",
     "npm-run": "5",
     "nyc": "15",
     "prettier": "2",
