Unit tests Collection:replace and Collection::update

--- a/lib.collections/package.json
+++ b/lib.collections/package.json
@@ -38,11 +38,10 @@
         "@thermopylae/lib.exception": "0",
         "ajv": "6",
         "ajv-i18n": "3",
+        "common-query": "2",
         "dot-prop": "5",
-        "filtr": "0",
         "isobject": "4",
         "lodash.isfunction": "3",
-        "mongo-query": "0",
         "rxjs": "6",
         "thenby": "1"
     },
@@ -50,12 +49,14 @@
         "@b4dnewz/mongodb-operators": "0",
         "@thermopylae/core.declarations": "0",
         "@thermopylae/lib.unit-test": "0",
-        "@thermopylae/lib.utils": "0",
-        "@thermopylae/module-builder": "0.0.1600604601",
+        "@thermopylae/lib.utils": "0.0.1600887552",
+        "@thermopylae/module-builder": "0",
         "@types/deep-freeze": "0",
+        "@types/lodash.orderby": "4",
         "@types/lodash.uniqby": "4",
         "deep-freeze": "0",
         "json-schema-typed": "7",
+        "lodash.orderby": "4",
         "lodash.uniqby": "4",
         "mocker-data-generator": "2",
         "range-generator": "1"
